--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -125,6 +125,6 @@
     <value>facebook-fakebook.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="connectionString" xml:space="preserve">
-    <value>Data Source=DESKTOP-4ETHRKO\SQLEXPRESS;Initial Catalog=Prueba1;Integrated Security=True</value>
+    <value>Data Source=DESKTOP-15I3C3R\SQLEXPRESS;Initial Catalog=Prueba1;Integrated Security=True</value>
   </data>
 </root>
